--- a/css/admin-theme-customizer-styles.css
+++ b/css/admin-theme-customizer-styles.css
@@ -283,3 +283,14 @@ p.description {
 p.description:empty {
 	margin-bottom: 5px;
 }
+
+.tf-upload .tf-image-preview img {
+    margin-top: 0px;
+    margin-left: 0px;
+    top: 50%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -ms-transform: translateX(-50%) translateY(-50%);
+}
